--- a/scss/main.css
+++ b/scss/main.css
@@ -22,4 +22,11 @@ body {
   opacity: 0.4;
 }
 
+h1 {
+  font-size: 15vw;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+  color: #FFFFFF;
+}
+
 /*# sourceMappingURL=main.css.map */
