--- a/scss/main.scss
+++ b/scss/main.scss
@@ -27,4 +27,6 @@ h1 {
     font-family: 'Montserrat', sans-serif;
     font-weight: 600;
     color: #FFFFFF;
+    position: absolute;
+    padding-top: 29vw;
 }
