--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,11 +4,46 @@ body {
     flex-direction: column;
     align-items: center;
     margin: 0;
+    min-height: 100vh;
+}
+
+header {
+    display: flex;
+    justify-content: center;
+    width: 100vw;
+    height: 7vh;
+    position: sticky;
+    top: 100%;
+    background-color: #3C3E44;
+
+    img {
+        width: 29.07vw;
+        padding-left: 2.33vw;
+        filter: brightness(1.1);
+    }
+    nav {
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+    }
+
+    div {
+        display: flex;
+        justify-content: space-around;
+        padding: 0 0 0 9.30vw;
+        width: 53.4884vw;
+    }
+    span {
+        color: #11B0C8;
+        font-family: 'Montserrat', sans-serif;
+        font-weight: 600;
+        font-size: 4.19vw;
+    }
 }
 
 #image-container {
     width: 100%;
-    margin: 0 auto;
+    margin: -65px auto;
     position: relative;
     overflow: hidden;
 }
