--- a/scss/main.scss
+++ b/scss/main.scss
@@ -48,7 +48,7 @@ header {
 
 #image-container {
     width: 100%;
-    margin: -65px auto;
+    margin: -15.13vw auto;
     position: relative;
     overflow: hidden;
 }
@@ -82,33 +82,33 @@ h1 {
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 488px;
+    height: 114vw;
     font-family: 'Montserrat', sans-serif;
     background-color: #3C3E44;
     border-radius: 6vw;
-    margin-bottom: 30px;
+    margin-bottom: 7vw;
     overflow: hidden;
 
 
     img {
-        height: 348px;
+        height: 81.8vw;
     }
 
     h2 {
         width: 87%;
-        margin: 10px 0 0 0;
+        margin: 2.3vw 0 0 0;
         color: #FFFFFF;
-        font-size: 43px;
+        font-size: 10vw;
     }
 
     p {
-        font-size: 14px;
+        font-size: 3.3vw;
         color: #11B0C8;
     }
 
     .icon-location {
-        margin-right: 7px;
-        width: 17px;
+        margin-right: 1.65vw;
+        width: 3.96vw;
         height: auto;
         filter: invert(100%);
     }
@@ -133,10 +133,10 @@ h1 {
 
 .status-circle {
     display: inline-block;
-    width: 17px;
-    height: 17px;
+    width: 3.96vw;
+    height: 3.96vw;
     border-radius: 50%;
-    margin-right: 7px;
+    margin-right: 1.65vw;
 }
 
 .alive { background-color: #16E21E; }
@@ -145,12 +145,12 @@ h1 {
 
 button {
     font-family: 'Montserrat', sans-serif;
-    font-size: 25px;
+    font-size: 5.82vw;
     background-color: #11B0C8;
     color: #FFFFFF;
     width: 82vw;
-    height: 66px;
-    margin-bottom: 110px;
+    height: 15.82vw;
+    margin-bottom: 25.59vw;
     border-radius: 6vw;
     border: 0;
 }
