--- a/scss/main.css
+++ b/scss/main.css
@@ -152,4 +152,102 @@ button {
   border: 0;
 }
 
+@media (min-width: 993px) {
+  header {
+    z-index: 2;
+    display: flex;
+    justify-content: center;
+    width: 99.1vw;
+    height: 4.0625vw;
+    top: 0;
+  }
+  header img {
+    width: 8.3333vw;
+    padding-right: 43vw;
+    padding-left: 0;
+  }
+  header nav {
+    width: 100vw;
+  }
+  header div {
+    width: 20vw;
+  }
+  header span {
+    font-size: 1.09375vw;
+  }
+  #main-img {
+    width: 100%;
+    margin: 5.4% 0 -6% 0;
+  }
+  h1 {
+    font-size: 5.3646vw;
+    padding-top: 15vw;
+    width: 75vw;
+  }
+  #character-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-top: 7.5vw;
+    width: 74.5vw;
+  }
+  .character {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 23.2292vw;
+    height: 31.0417vw;
+    font-family: "Montserrat", sans-serif;
+    background-color: #3C3E44;
+    border-radius: 1vw;
+    margin-bottom: 4vw;
+    overflow: hidden;
+  }
+  .character img {
+    height: 23.2292vw;
+    width: 23.2292vw;
+  }
+  .character h2 {
+    width: 87%;
+    margin: 1.1vw 0 0 0;
+    color: #FFFFFF;
+    font-size: 2.2396vw;
+  }
+  .character p {
+    font-size: 0.9375vw;
+    color: #11B0C8;
+  }
+  .character .icon-location {
+    margin-right: 0.5vw;
+    width: 0.9896vw;
+    height: auto;
+    filter: invert(100%);
+  }
+  .character .text-container {
+    margin: -0.3vw;
+    width: 85%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .status-circle {
+    display: inline-block;
+    width: 0.9896vw;
+    height: 0.9896vw;
+    border-radius: 50%;
+    margin-right: 0.5vw;
+  }
+  button {
+    font-family: "Montserrat", sans-serif;
+    font-size: 1.3021vw;
+    background-color: #11B0C8;
+    color: #FFFFFF;
+    width: 19.375vw;
+    height: 3.4896vw;
+    margin-bottom: 6vw;
+    border-radius: 1.3021vw;
+    border: 0;
+  }
+}
+
 /*# sourceMappingURL=main.css.map */
